cmake_minimum_required(VERSION 3.0)

add_subdirectory(account_server)
add_subdirectory(data_server)
add_subdirectory(game_server)
add_subdirectory(gateway_server)
add_subdirectory(host_server)
add_subdirectory(login_server)
add_subdirectory(manage_console)
add_subdirectory(manage_server)
add_subdirectory(shared_server)
